force-app/main/default/objects/FIN_RemittanceItem__c/FIN_RemittanceItem__c.object-meta.xml
<CustomObject>
    <label>Remittance Item</label>
    <nameField>
        <displayFormat>RI-{0000000000}</displayFormat>
        <label>Remittance Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remittance Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>