force-app/main/default/objects/FIN_RemittanceItem__c/fields/FIN_ParentRemittanceSchedule__c.field-meta.xml
<CustomField>
    <fullName>FIN_ParentRemittanceSchedule__c</fullName>
    <label>Parent Remittance Schedule</label>
    <referenceTo>FIN_RemittanceSchedule__c</referenceTo>
    <relationshipLabel>Remittance Items</relationshipLabel>
    <relationshipName>Remittance_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>