force-app/main/default/objects/FIN_RemittanceItem__c/fields/FIN_Payee__c.field-meta.xml
<CustomField>
    <fullName>FIN_Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remittance Account</label>
    <referenceTo>FIN_Payee__c</referenceTo>
    <relationshipLabel>Remittance Items</relationshipLabel>
    <relationshipName>Remittance_Items</relationshipName>
    <type>Lookup</type>
</CustomField>