force-app/main/default/objects/FIN_RemittanceItem__c/fields/FIN_RemittanceAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_RemittanceAmount__c</fullName>
    <label>Remittance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>