force-app/main/default/objects/FIN_RemittanceItem__c/fields/FIN_RemittancePayout__c.field-meta.xml
<CustomField>
    <fullName>FIN_RemittancePayout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remittance Payout</label>
    <referenceTo>Remittance_Payout__c</referenceTo>
    <relationshipLabel>Remittance Items</relationshipLabel>
    <relationshipName>Remittance_Items</relationshipName>
    <type>Lookup</type>
</CustomField>