force-app/main/default/objects/FIN_RemittanceItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FIN_ParentRemittanceSchedule__c</columns>
    <columns>FIN_Payee__c</columns>
    <columns>FIN_RemittanceAccount__c</columns>
    <columns>FIN_RemittanceAmount__c</columns>
    <columns>FIN_RemittancePayout__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>